--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                   <div class="col-md-6 col-md-offset-1 col-sm-6 col-sm-offset-1  ">
                      <div class="block-content">
                         <h2 class="title-medium mb-10 pb-10">
-                          Kommm rein und friss<br>Ich hoffe auf AIDS
+                          PLATZHALTERRRRRRRRRRRR<br>PLAAAAAATZHALTTTTTTTTER
                            <span class="dots"></span>
                         </h2>
                         <h4 class="title-small">Making delicious italian food since 1990</h4>
@@ -152,9 +152,9 @@
                <!--Row-->
                <div class="row">
                   <div class="col-sm-12 text-center front-p">
-                     <h1 class="large">make a reservation</h1>
-                     <p class="lead white top">Opens 8:00 AM - 10:00 PM, every day of the week </p>
-                     <a href="#reservation" class="but scroll">Book a table</a>
+                     <h1 class="large">Kontakt</h1>
+                     <p class="lead white top">Momentan: $STATUS$ </p>
+                     <a href="#reservation" class="but scroll">Konktieren Sie uns</a>
                   </div>
                </div>
                <!--End row-->
