added privacy and imprint

--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
                         <li><a class="scroll" href="#reservation">Contact</a></li>
                         <li><a class="scroll" href="#gallery">Impressionen</a></li>
                         <li><a class="scroll" href="#contact">Location</a></li>
+                        <li><a class="scroll" href="/privacy.html">Privacy</a></li>
+                        <li><a class="scroll" href="/imprint.html">Imprint</a></li>
                      </ul>
                   </nav>
                </div>
@@ -128,11 +130,19 @@
                   <div class="col-md-6 col-md-offset-1 col-sm-6 col-sm-offset-1  ">
                      <div class="block-content">
                         <h2 class="title-medium mb-10 pb-10">
-                          PLATZHALTERRRRRRRRRRRR<br>PLAAAAAATZHALTTTTTTTTER
+                           Liebe Gäste,
                            <span class="dots"></span>
                         </h2>
-                        <h4 class="title-small">Making delicious italian food since 1990</h4>
-                        <p class="puch-right mb-40">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book galley of type and scrambled .</p>
+                        <h4 class="title-small">Mein Name ist Enzo Rapana und zusammen mit meiner Familie besitze ich die Pizzeria „La Locanda“ in Roßtal.</h4>
+                        <p><br>
+
+                           Seit über 20 Jahren arbeite ich in der italienischen Gastronomie und nach so vielen Jahren habe ich entschieden, mich selbstständig zu machen.<br>
+                           Bei uns warten auf Sie nicht nur leckere Italienische Gerichte, sondern auch ein freundliches italienisches Personal, welches täglich alles frisch und voller Liebe für Sie zubereitet.
+                           <br>Ob Pizza, Focaccia, Pasta oder leckere Desserts, bei uns finden sie einen großen Teil der  vielfältigen italienischen Küche.<br>
+                           Schauen Sie sich doch einfach unsere Speisekarte an und kommen Sie uns gerne besuchen!
+
+                           Wir freuen uns auf Sie!
+                           Enzo Rapana und Familie</p>
                         <img class="sing" src="img/signature.png" alt="">
                      </div>
                   </div>
