--- a/index.html
+++ b/index.html
@@ -1046,49 +1046,7 @@
                <!--Row-->
                <div class="row">
                   <div class="col-sm-12 text-center front-p">
-                     <div class="review-slider flexslider">
-                        <ul class="slides">
-                           <li>
-                              <div class="block-review">
-                                 <h2 class="white h2-s-1 mb-5">XXXXXX</h2>
-                                 <p>XXXXXXXXXX</p>
-                                 <ul class="block-star mt-10">
-                                    <li><i class="icon-star"></i></li>
-                                    <li><i class="icon-star"></i></li>
-                                    <li><i class="icon-star"></i></li>
-                                    <li><i class="icon-star"></i></li>
-                                    <li><i class="icon-star-empty"></i></li>
-                                 </ul>
-                              </div>
-                           </li>
-                           <li>
-                              <div class="block-review">
-                                 <h2 class="white h2-s-1 mb-5">XXXXXXX</h2>
-                                 <p>XXXXXXXXX </p>
-                                 <ul class="block-star mt-10">
-                                    <li><i class="icon-star"></i></li>
-                                    <li><i class="icon-star"></i></li>
-                                    <li><i class="icon-star"></i></li>
-                                    <li><i class="icon-star-empty"></i></li>
-                                    <li><i class="icon-star-empty"></i></li>
-                                 </ul>
-                              </div>
-                           </li>
-                           <li>
-                              <div class="block-review">
-                                 <h2 class="white h2-s-1 mb-5">XXXXXXXX</h2>
-                                 <p>XXXXXXXXXXXXX</p>
-                                 <ul class="block-star mt-10">
-                                    <li><i class="icon-star"></i></li>
-                                    <li><i class="icon-star"></i></li>
-                                    <li><i class="icon-star"></i></li>
-                                    <li><i class="icon-star"></i></li>
-                                    <li><i class="icon-star-half"></i></li>
-                                 </ul>
-                              </div>
-                           </li>
-                        </ul>
-                     </div>
+                     <br><br><br><br><br><br><br><br><br><br><br><br>
                   </div>
                </div>
                <!--End row-->
@@ -1096,65 +1054,7 @@
             <!--End container-->
          </section>
          <!--End reviews section-->
-         <!--Special section-->
-         <section  id="special" class="special pt-120 pb-120">
-            <!--Container-->
-            <div class="container">
-               <!--Row-->
-               <div class="row">
-                  <div class="col-sm-12 text-center mb-100">
-                     <h1 class="title">Wochenangebot</h1>
-                  </div>
-               </div>
-               <!--End row-->
-            </div>
-            <!--End container-->
-            <!--Container-->
-            <div class=" container">
-               <!--Row-->
-               <div class="row">
-                  <div class="col-md-4  pd-0 block-special">
-                     <div class="block-img special">
-                        <div class="background-img">
-                           <img class="lazy" src="img/331.jpg" alt="">
-                        </div>
-                     </div>
-                     <div class="block-content special sp-1">
-                        <h2 class="mb-5  h2-s-1">XXXXXX</h2>
-                        <p>XXXXXXX</p>
-                        <span class="block-price special">XXXXX</span>
-                        <span class="block-border "></span>
-                     </div>
-                  </div>
-                  <div class="col-md-4  pd-0 block-special active ">
-                     <div class="block-img special">
-                        <div class="background-img">
-                           <img class="lazy" src="img/332.jpg" alt="">
-                        </div>
-                     </div>
-                     <div class="block-content special sp-2">
-                        <h2 class="mb-5  h2-s-1">XXXXXXX</h2>
-                        <p></p>XXXXXXXXXXXXXXXXXXXXX</p>
-                        <span class="block-price special">XXXXX</span>
-                     </div>
-                  </div>
-                  <div class="col-md-4  pd-0 block-special">
-                     <div class="block-img special">
-                        <div class="background-img">
-                           <img class="lazy" src="img/333.jpg" alt="">
-                        </div>
-                     </div>
-                     <div class="block-content special sp-3">
-                        <h2 class="mb-5  h2-s-1">XXXXXXX</h2>
-                        <p>XXXXXXX</p>
-                        <span class="block-price special">XXXXX</span>
-                     </div>
-                  </div>
-               </div>
-               <!--End row-->
-            </div>
-            <!--End container-->
-         </section>
+
          <!--End special section-->
          <!--Reservation section-->
          <section id="reservation" class="reservation pt-140 pb-140 bg-grey">
@@ -1184,54 +1084,20 @@
                               <input  id="name" name="name" type="text" required>
                            </div>
                            <div class="block-input ico-input">
-                              <i class="icon-phone"></i>
-                              <label>Your Phone:</label>
-                              <input  id="phone" name="phone" type="text">
-                           </div>
-                           <div class="block-input ico-input">
                               <i class="icon-mail-1"></i>
                               <label>Your Email:</label>
                               <input  id="email" name="email" type="text">
                            </div>
                            <!--Input columns-->
                            <div class="input-columns block-input clearfix">
-                              <div class="column-1">
-                                 <div class="column-inner">
-                                    <label>Number of person :  </label>
-                                    <input   id="person" min="1" name="person"  type="number" required>
-                                 </div>
-                              </div>
-                              <!--Column-->
-                              <div class="column-2">
-                                 <div class="column-inner">
-                                    <label>Type of table:</label>
-                                    <input   id="table" min="1" name="table" type="number" required>
-                                 </div>
-                              </div>
-                              <!--End column-->
-                           </div>
-                           <!--End input columns-->
-                           <!--Input columns-->
-                           <div class="input-columns block-input clearfix">
-                              <div class="column-1">
                                  <div class="column-inner ico-input">
-                                    <i class="icon-calendar"></i>
-                                    <label>Date :  </label>
-                                    <input  class="date" id="date" name="date" type="date" required>
+                                    <label>Message :  </label>
+                                    <input name="message" type="text" required>
                                  </div>
-                              </div>
-                              <!--Column-->
-                              <div class="column-2">
-                                 <div class="column-inner ico-input">
-                                    <i class="icon-clock"></i>
-                                    <label>Time:</label>
-                                    <input   placeholder="(ex: 7:00 p.m)"  id="time" name="time" type="text" required>
-                                 </div>
-                              </div>
-                              <!--End column-->
-                           </div>
                            <!--End input columns-->
-                           <button  class=" but submit" type="submit">Boook a table</button>
+                              <br>
+                           </div>
+                           <button  class=" but submit" type="submit">Contact</button>
 
 							 <!--Contact form message-->
                                <div class="success-msg">
