--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
                <ul class="slides">
                   <li>
                      <div class="background-img zoom">
-                        <img class="lazy" src="img/17.jpg" alt="">
+                        <img class="lazy" src="img/17-1.jpg" alt="">
                      </div>
                   </li>
                   <li>
                      <div class="background-img zoom">
-                        <img class="lazy" src="img/15.jpg" alt="">
+                        <img class="lazy" src="img/15-1.jpg" alt="">
                      </div>
                   </li>
                </ul>
@@ -54,7 +54,7 @@
             <header class="header default">
                <div class=" left-part">
                   <a class="logo scroll" href="#hero">
-                     <h2>Pizzaria in Roßtal</h2>
+                     <h2>Pizzaria La Locanda</h2>
                   </a>
                </div>
                <div class="right-part">
@@ -86,7 +86,7 @@
                   <!--Row-->
                   <div class="row">
                      <div class="col-sm-12 text-center">
-                        <h1 class="large">Pizzaria in Roßtal</h1>
+                        <h1 class="large">Pizzaria La Locanda</h1>
                         <p class="lead">Pizza - Salate - Pasta - Desserts</p>
 
                      </div>
@@ -143,8 +143,8 @@
 
                            Wir freuen uns auf Sie!
                            Enzo Rapana und Familie</p>
-                        <img class="sing" src="img/signature.png" alt="">
-                     </div>
+                        <br><br>
+                        </div>
                   </div>
                </div>
                <!--End row-->
@@ -155,7 +155,7 @@
          <!--Short reservation section-->
          <section class="short-reservation pt-200 pb-250 overlay">
             <div class="background-img zoom" >
-               <img class="lazy" src="img/223.jpg" alt="">
+               <img class="lazy" src="img/223-1.jpg" alt="">
             </div>
             <!--Container-->
             <div class="container">
@@ -1039,7 +1039,7 @@
          <!--Review section-->
          <section class="review pt-120 pb-120 overlay">
             <div class="background-img zoom" >
-               <img class="lazy" src="img/224.jpg" alt="">
+               <img class="lazy" src="img/224-1.jpg" alt="">
             </div>
             <!--Container-->
             <div class="container">
@@ -1128,17 +1128,17 @@
                <ul class="slides">
                   <li>
                      <div class="background-img zoom">
-                        <img class="lazy" src="img/334.jpg" alt="">
+                        <img class="lazy" src="img/334-1.jpg" alt="">
                      </div>
                   </li>
                   <li>
                      <div class="background-img zoom">
-                        <img class="lazy" src="img/332.jpg" alt="">
+                        <img class="lazy" src="img/332-1.jpg" alt="">
                      </div>
                   </li>
                   <li>
                      <div class="background-img zoom">
-                        <img class="lazy" src="img/333.jpg" alt="">
+                        <img class="lazy" src="img/333-1.jpg" alt="">
                      </div>
                   </li>
                </ul>
