--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <head>
       <!-- Metas -->
       <meta charset="utf-8">
-      <title>Pizzaria in Roßtal</title>
+      <title>Pizzeria in Roßtal</title>
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <!-- Css -->
@@ -54,7 +54,7 @@
             <header class="header default">
                <div class=" left-part">
                   <a class="logo scroll" href="#hero">
-                     <h2>Pizzaria La Locanda</h2>
+                     <h2>Pizzerria La Locanda</h2>
                   </a>
                </div>
                <div class="right-part">
@@ -86,7 +86,7 @@
                   <!--Row-->
                   <div class="row">
                      <div class="col-sm-12 text-center">
-                        <h1 class="large">Pizzaria La Locanda</h1>
+                        <h1 class="large">Pizzeria La Locanda</h1>
                         <p class="lead">Pizza - Salate - Pasta - Desserts</p>
 
                      </div>
@@ -105,7 +105,7 @@
                <!--Row-->
                <div class="row">
                   <div class="col-sm-12 text-center mb-100">
-                     <h1 class="title">Die Pizzaria</h1>
+                     <h1 class="title">Die Pizzeria</h1>
                   </div>
                </div>
                <!--End row-->
