--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <header class="header default">
                <div class=" left-part">
                   <a class="logo scroll" href="#hero">
-                     <h2>Pizzerria La Locanda</h2>
+                     <h2>Pizzeria La Locanda</h2>
                   </a>
                </div>
                <div class="right-part">
