--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <link href="css/main.css" rel="stylesheet" type="text/css" media="all"/>
       <link href="css/flexslider.css" rel="stylesheet" type="text/css"  media="all" />
       <link href="css/fonts.css" rel="stylesheet" type="text/css"  media="all" />
-	  <link href="https://fonts.googleapis.com/css?family=Kristi" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Petit+Formal+Script" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Kristi" rel="stylesheet">
 	  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
 	  <link href="https://fonts.googleapis.com/css?family=Lora:400,700" rel="stylesheet">
 	   </head>
@@ -86,8 +87,8 @@
                   <!--Row-->
                   <div class="row">
                      <div class="col-sm-12 text-center">
-                        <h1 class="large">Pizzeria La Locanda</h1>
-                        <p class="lead">Pizza - Salate - Pasta - Desserts</p>
+                        <h1 class="large" style="font-family: 'Petit Formal Script', cursive;">Pizzeria <br>La Locanda</h1>
+                        <p hidden class="lead">Pizza - Salate - Pasta - Desserts</p>
 
                      </div>
                   </div>
